# elysium

./: .editorconfig  CHANGELOG.md  Cargo.toml  README.md  build.rs  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: build_gnu_linux.yml  build_macos.yml  cd.yml  ci.yml
elysium/: Cargo.toml
elysium/src/: deployments.rs  devices.rs  groups.rs  lib.rs
elysium_tui/: Cargo.toml
elysium_tui/src/: app.rs  args.rs  main.rs  utils.rs
elysium_tui/src/components/: data_table.rs  top_right.rs
src/: action.rs  app.rs  args.rs  components.rs  enums.rs  layout.rs  lib.rs  main.rs  tui.rs  utils.rs
src/aws/: deployments.rs  devices.rs  groups.rs  mod.rs
src/components/: data_table.rs  header.rs  top_left.rs
src/devices/: command.rs  config.rs  mod.rs
src/tui/: app.rs  command.rs  config.rs  event.rs  mod.rs  terminal.rs  ui.rs  update.rs
src/tui/widgets/: list.rs  mod.rs
