[package]
name = "elysium"
version = "0.1.0"
description = "Tools for managing IoT Core cloud devices"
authors = ["Richard Osterloh <richard.osterloh@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rosterloh/elysium"
repository = "https://github.com/rosterloh/elysium"
keywords = ["aws", "tui"]
categories = ["command-line-utilities"]
edition = "2021"
rust-version = "1.81.0"
include = [
  "src/**/*",
  "Cargo.*",
  "README.md",
  "CHANGELOG.md",
]

[dependencies]
anyhow = "1.0.89"
aws-config = { version= "1.5.8", features = ["behavior-version-latest"] }
aws-sdk-greengrassv2 = "1.47.0"
aws-types = "1.3.3"
better-panic = "0.3.0"
clap = { version = "4.5.20", features = ["derive", "env", "wrap_help", "cargo"] }
itertools = "0.13.0"
ratatui = { version = "0.28.1", features = ["crossterm", "serde"] }
tokio = { version = "1.40.0", features = ["full"] }
tui-input = "0.10.1"
unicode-width = "0.2.0"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
debug = false
