[workspace]
resolver = "2"
members = [
    "elysium",
    "elysium_tui",
]

[workspace.package]
authors = ["Richard Osterloh <richard.osterloh@gmail.com>"]
include = ["src/**/*.rs", "LICENSE", "README.md"]
edition = "2024"
repository = "https://github.com/rosterloh/elysium"
rust-version = "1.85.0"

[workspace.dependencies]
anyhow = "^1.0.97"
tracing = "^0.1.41"