[package]
authors.workspace = true
categories = ["command-line-utilities"]
description = "Tools for managing IoT Core cloud devices"
keywords = ["aws", "tui"]
license = "MIT"
name = "elysium_tui"
readme = "../README.md"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
better-panic = "0.3.0"
color-eyre = "0.6.3"
clap = { version = "4.5", features = ["cargo", "derive", "string", "wrap_help"] }
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
directories = "6.0.0"
elysium = { version = "0.1.0", path = "../elysium" }
futures = "0.3.31"
human-panic = "2.0.2"
itertools = "0.14.0"
lazy_static = "1.5.0"
ratatui = { version = "0.29.0", features = ["serde", "macros"] }
serde = { version = "1.0", features = ["derive"] }
signal-hook = "0.3.17"
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = "0.7.13"
tracing.workspace = true
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "serde"] }
tui-input = "0.11.1"
tui-popup = "0.6.0"
unicode-width = "0.2.0"

[build-dependencies]
anyhow = "1.0"
vergen-gix = { version = "1.0.6", features = ["build", "cargo"] }

[package.metadata.deb]
depends = "$auto"
extended-description = """
Elysium is a terminal-based application to view and query AWS IoT Core devices.
"""
section = "utils"
priority = "optional"
assets = [
     [
        "target/release/elysium",
        "/usr/bin/elysium",
        "0755",
    ],
]

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

# https://doc.rust-lang.org/cargo/reference/profiles.html#release
[profile.release]
opt-level = "z"
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = true
